fix(ConditionDetails): fixes the missing space before the project name

--- a/src/components/ConditionDetails/ProjectHeader/styles.scss
+++ b/src/components/ConditionDetails/ProjectHeader/styles.scss
@@ -69,7 +69,14 @@
         color: $Black77;
       }
 
-      &:before{
+      &:before {
+        content: '\00a0';
+        display: inline-block;
+      }
+    }
+
+    .projectName {
+      &:before {
         content: '\00a0';
         display: inline-block;
       }
