--- a/src/components/ConditionDetails/styles.scss
+++ b/src/components/ConditionDetails/styles.scss
@@ -123,7 +123,6 @@ $popoutSize: 200px;
 
     font-family: $fira-sans-condensed-bold;
     font-size: 14px;
-    text-decoration: underline;
 
     color: $Black51;
   }
